# psel-patos

./: .gitignore  Cargo.toml  README.md  start.sh
app_server/: Cargo.toml
app_server/src/: errors_handler.rs  get_handler.rs  handler.rs  main.rs
libs/http_parser/: Cargo.toml
libs/http_parser/src/: errors.rs  lib.rs  request.rs  response.rs
libs/http_parser/src/parsers/: header_parser.rs  method_parser.rs  mod.rs  protocol_parser.rs
libs/http_parser/src/parts/: header.rs  method.rs  mod.rs  protocol.rs  status_code.rs
libs/http_parser/src/request/: request.rs  request_builder.rs
libs/http_parser/src/response/: mod.rs  response.rs  response_builder.rs
libs/http_parser/tests/: request_tests.rs  response_tests.rs
libs/json_parser/: Cargo.toml
libs/json_parser/src/: lib.rs
libs/json_parser/tests/: testes.rs
libs/smol_server/: Cargo.toml
libs/smol_server/src/: client.rs  lib.rs  server.rs
libs/smol_server/src/server/: fn_handler.rs  mod.rs  server.rs  server_builder.rs  server_data.rs  stream_handler.rs
libs/tcp_wrapper/: Cargo.toml
libs/tcp_wrapper/src/: lib.rs
libs/tcp_wrapper/tests/: send.rs  tests.rs
pages/errors/: 400.html  404.html  405.html  500.html  505.html
pages/main_page/: index.html
pages/main_page/assets/css/: style.css
pages/main_page/assets/js/: main.js
pages/main_page2/: index.html
pages/main_page2/assets/css/: style.css
web_server/: Cargo.toml
web_server/src/: erros_handlers.rs  main.rs
